# halo-reader

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  raw-formats.md  rawformats.md  release  setup.py
.github/workflows/: ci.yml  publish.yml
src/halo_reader/: __main__.py  attribute.py  cli.py  debug.py  exceptions.py  grammar_header.lark  halo.py  metadata.py  read.py  scantype.py  timer.py  transformer.py  type_guards.py  utils.py  variable.py
src/halo_reader/background_reader/: __init__.pyi  background_reader.pyx
src/halo_reader/data_reader/: __init__.pyi  data_reader.pyx
src/haloboard/: __init__.py  app.py  writer.py
src/haloboard/static/: style.css
src/haloboard/templates/: index.html
src/halodata/: api.py  cli.py  database.py  datasets.py  download.py  metadata.py
src/haloreader/: __init__.py  attenuated_backscatter_coefficient.py  attribute.py  background_correction.py  background_reader.py  cli.py  exceptions.py  grammar_header.lark  halo.py  metadata.py  product.py  read.py  scangroup.py  scantype.py  screen.py  transformer.py  type_guards.py  utils.py  variable.py  wind.py
src/haloreader/background_correction/: correct_background.py
src/haloreader/background_reader/: __init__.pyi  background_reader.pyx
src/haloreader/data_reader/: __init__.pyi  data_reader.pyx
stubs/cython/: __init__.pyi
stubs/lark/: __init__.pyi
stubs/netCDF4/: __init__.pyi
tests/: test_bg_reader.py  test_halo_reader.py
tests/raw-files/pass/: eriswil-2022-12-14-Stare_91_20221214_11.hpl  eriswil-2022-12-14-Stare_91_20221214_12.hpl  hyytiala-2023-09-13-Stare_46_20230913_23.hpl  soverato-2021-10-01-VAD_194_20210624_170110.hpl  warsaw-2022-12-13-Stare_213_20221213_04.hpl
tests/raw-files/pass/eriswil-2022-12-14-background/: Background_141222-000013.txt  Background_141222-010013.txt
tests/raw-files/pass/hyytiala-2023-08-15-background/: Background_150823-122811.txt
tests/raw-files/xfail/: warsaw-2021-10-01-Stare_213_20211001_18.hpl
