[build-system]
requires = ["setuptools", "cython==0.29.30", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-reader"
description = "HALO Photonics wind doppler lidar file reader"
dynamic = ["version"]
authors = [
  { name="Niko Leskinen", email="niko.leskinen@fmi.fi" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

dependencies = [
  "cython",
  "numpy",
  "lark",
  "netCDF4",
]

[project.urls]
homepage = "https://github.com/actris-cloudnet/halo-reader"
repository = "https://github.com/actris-cloudnet/halo-reader"
changelog = "https://github.com/actris-cloudnet/halo-reader/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/actris-cloudnet/halo-reader/issues"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "pylint",
  "autoflake",
  "isort",
  "pre-commit",
  "requests"
]

[project.scripts]
halo2nc = "halo_reader.cli:halo2nc"
halobg2nc = "halo_reader.cli:halobg2nc"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.dynamic]
version = {attr = "halo_reader.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=halo_reader --cov-report html"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "stubs/"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pylint]
ignore-patterns = "test_.*\\.py"
max-line-length = 79
good-names = ["i", "j", "k", "v", "f", "nc"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-instance-attributes",
  "no-member",
  "no-name-in-module",
  "unnecessary-lambda-assignment"
]
extension-pkg-whitelist = [
  "netCDF4",
  "halo_reader.background_reader",
  "halo_reader.data_reader",
  ]
