[build-system]
requires = ["setuptools", "cython==0.29.30", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-reader"
description = "HALO Photonics wind doppler lidar file reader"
dynamic = ["version"]
authors = [
  { name="Niko Leskinen", email="niko.leskinen@fmi.fi" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]

dependencies = [
  "cython",
  "numpy",
  "lark",
  "netCDF4",
  "matplotlib",
  "flask",
  "requests",
  "scikit-learn",
  "scipy",
]

[project.urls]
homepage = "https://github.com/actris-cloudnet/halo-reader"
repository = "https://github.com/actris-cloudnet/halo-reader"
changelog = "https://github.com/actris-cloudnet/halo-reader/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/actris-cloudnet/halo-reader/issues"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "pylint",
  "autoflake",
  "isort",
  "pre-commit",
  "types-requests"
]

[project.scripts]
halo2nc = "haloreader.cli:halo2nc"
halobg2nc = "haloreader.cli:halobg2nc"
haloboard = "haloboard.app:run"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.dynamic]
version = {attr = "haloreader.version.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=haloreader --cov-report html"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "stubs/"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile= "black"
line_length = 79

[tool.pylint]
ignore-patterns = "test_.*\\.py"
max-line-length = 79
good-names = ["i", "j", "k", "v", "f", "nc", "ax"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-instance-attributes",
  "too-few-public-methods",
  "no-member",
  "no-name-in-module",
  "unnecessary-lambda-assignment"
]
extension-pkg-whitelist = [
  "netCDF4",
  "haloreader.background_reader",
  "haloreader.data_reader",
  ]
